--- a/starwars/src/App.css
+++ b/starwars/src/App.css
@@ -1,9 +1,14 @@
+html {
+  font-size: 62.5%;
+}
+
 .App {
   text-align: center;
 }
 .Header {
   color: #443e3e;
   text-shadow: 1px 1px 5px #fff;
+  font-size: 3.2rem;
 }
 /* write your parent styles in here for your App.js */
 
